fix(input): set height multiplier to accommodate padding
The padding on input elements now ensures that select box options text
is no longer cut off.

This appeared to be fixed in 01b3788f63150307be5d9eccb3c9e9498252ec51
but it appears that the select options in `index.html` were all above
the baseline so the issue was not highlighted. The options inside the
select have been updated to values that will be cut off if the select
box is too small.

--- a/variables.less
+++ b/variables.less
@@ -187,7 +187,7 @@
 @input-color-placeholder:        @gray-light;
 
 //** Default `.form-control` height
-@input-height-base:              (@line-height-computed + (@padding-base-vertical * 1.2) + 2);
+@input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
 //** Large `.form-control` height
 @input-height-large:             (ceil(@font-size-large * @line-height-large) + (@padding-large-vertical * 2) + 2);
 //** Small `.form-control` height
